--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Top Pot Donuts Per Hour</title>
+    <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
       <h1>Top Pot Donuts</h1>
+      <hr class = "line"></hr>
     </header>
     <main>
       <table id="main-table">
