--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -18,8 +18,21 @@
         </tbody>
       </table>
     </main>
+   <fieldset id="Add">
+    <legend>Add A Store</legend>
+      <label>Location:<br />
+        <input type="text" name="Location" /></label><br />
+        <label>Min Customers Per Hour:<br />
+          <input type="text" name="Min Customers Per Hour" /></label><br />
+          <label>Max Customers Per Hour:<br />
+          <input type="text" name="Max Customers Per Hour" /></label><br />
+          <label>Avg Donuts Purchased Per Customer:<br />
+          <input type="text" name="Avg. Donuts Purchased Per Customer" /></label><br />
+          </button>
+          <input type="submit" value="submit" />
+    </fieldset>
     <footer>
-      <p>Creators Sue, Elliot, Nick, Tristan, David, Dale, Paul, and Steve</p>
+      <p>Creators Sue, Elliot, Nick, Tristan, David, Dale, Paul, Steve, Zach, Elliot</p>
     </footer>
     <script type="text/javascript" src="model.js"></script>
   </body>
