Added Listener for submit to populate table with new data

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
       <hr class = "line"></hr>
     </header>
     <main>
-      <table id="main-table">
+      <table id="main-table" class='mtable'>
         <thead id="table-head">
         </thead>
         <tbody id="table-body">
         </tbody>
       </table>
     </main>
-   <fieldset id="Add">
+   <fieldset id="add">
     <legend>Add A Store</legend>
       <label>Location:<br />
-        <input type="text" name="Location" /></label><br />
+        <input id="location" type="text" name="Location" /></label><br />
         <label>Min Customers Per Hour:<br />
-          <input type="text" name="Min Customers Per Hour" /></label><br />
+          <input id="minCustPH" type="text" name="Min Customers Per Hour" /></label><br />
           <label>Max Customers Per Hour:<br />
-          <input type="text" name="Max Customers Per Hour" /></label><br />
+          <input id="maxCustPH" type="text" name="Max Customers Per Hour" /></label><br />
           <label>Avg Donuts Purchased Per Customer:<br />
-          <input type="text" name="Avg. Donuts Purchased Per Customer" /></label><br />
+          <input id="avgDonPC" type="text" name="Avg. Donuts Purchased Per Customer" /></label><br />
           </button>
-          <input type="submit" value="submit" />
+          <input id="submit" type="submit" value="submit" />
     </fieldset>
     <footer>
       <p>Creators Sue, Elliot, Nick, Tristan, David, Dale, Paul, Steve, Zach, Elliot</p>
