Added animated donut

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <header>
+      <div class="stage">
+      <figure class="ball"></figure>
+      </div>
       <h1>Top Pot Donuts</h1>
+      <h2>Want to beat the rush? Be prepared? <br />
+        Calculate how many donuts to bake each hour for your store. <br />
+        Yum!</h2>
       <hr class = "line"></hr>
     </header>
     <main>
@@ -18,7 +24,7 @@
         </tbody>
       </table>
     </main>
-   <fieldset id="Add">
+    <fieldset id="Add">
     <legend>Add A Store</legend>
       <label>Location:<br />
         <input type="text" name="Location" /></label><br />
